@@ -12,7 +12,6 @@ import org.springframework.web.bind.annotation.*;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotNull;
-import jakarta.validation.constraints.Positive;
 import jakarta.validation.constraints.Size;
 import jakarta.validation.constraints.DecimalMin;
 import jakarta.validation.constraints.DecimalMax;
@@ -20,15 +19,17 @@ import jakarta.validation.constraints.Digits;
 import jakarta.validation.constraints.Pattern;
 
 import java.math.BigDecimal;
-import java.time.LocalDateTime;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/rest/expenses")
 @CrossOrigin(origins = "*")
 public class ExpenseController {
+
+    // Constantes para evitar duplicación de literales
+    private static final String ENERO_LITERAL = "enero";
+    private static final String ERROR_INTERNO_SERVIDOR = "Error interno del servidor: ";
 
     // Datos quemados - Miembros de familia
     private static final Map<UUID, FamilyMember> FAMILY_MEMBERS = new ConcurrentHashMap<>();
@@ -52,29 +53,27 @@ public class ExpenseController {
         UUID expenseId3 = UUID.fromString("660e8400-e29b-41d4-a716-446655440003");
 
         EXPENSES.put(expenseId1, new Expense(
-                expenseId1, "Supermercado", "Compras mensuales del hogar", "enero",
+                expenseId1, "Supermercado", "Compras mensuales del hogar", ENERO_LITERAL,
                 FAMILY_MEMBERS.get(familyId1), new BigDecimal("450.75"), ExpenseCategory.ALIMENTACION
         ));
 
         EXPENSES.put(expenseId2, new Expense(
-                expenseId2, "Gasolina", "Combustible para el vehículo", "enero",
+                expenseId2, "Gasolina", "Combustible para el vehículo", ENERO_LITERAL,
                 FAMILY_MEMBERS.get(familyId1), new BigDecimal("80.00"), ExpenseCategory.TRANSPORTE
         ));
 
         EXPENSES.put(expenseId3, new Expense(
-                expenseId3, "Material escolar", "Útiles para el colegio", "enero",
+                expenseId3, "Material escolar", "Útiles para el colegio", ENERO_LITERAL,
                 FAMILY_MEMBERS.get(familyId2), new BigDecimal("120.50"), ExpenseCategory.EDUCACION
         ));
     }
 
-    // GET: api/v1/rest/expenses
     @GetMapping("")
     public ResponseEntity<List<Expense>> getAll() {
         List<Expense> expenses = new ArrayList<>(EXPENSES.values());
         return ResponseEntity.ok(expenses);
     }
 
-    // GET: api/v1/rest/expenses/{id}
     @GetMapping("/{id}")
     public ResponseEntity<Expense> getById(@PathVariable UUID id) {
         Expense expense = EXPENSES.get(id);
@@ -84,34 +83,30 @@ public class ExpenseController {
         return ResponseEntity.notFound().build();
     }
 
-    // GET: api/v1/rest/expenses/by-category/{category}
     @GetMapping("/by-category/{category}")
     public ResponseEntity<List<Expense>> getByCategory(@PathVariable ExpenseCategory category) {
         List<Expense> expensesByCategory = EXPENSES.values().stream()
                 .filter(expense -> expense.getCategory() == category)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(expensesByCategory);
     }
 
-    // GET: api/v1/rest/expenses/by-period/{period}
     @GetMapping("/by-period/{period}")
     public ResponseEntity<List<Expense>> getByPeriod(@PathVariable String period) {
         List<Expense> expensesByPeriod = EXPENSES.values().stream()
                 .filter(expense -> expense.isSamePeriod(period))
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(expensesByPeriod);
     }
 
-    // GET: api/v1/rest/expenses/expensive
     @GetMapping("/expensive")
     public ResponseEntity<List<Expense>> getExpensiveExpenses() {
         List<Expense> expensiveExpenses = EXPENSES.values().stream()
                 .filter(Expense::isExpensive)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(expensiveExpenses);
     }
 
-    // GET: api/v1/rest/expenses/total-by-period/{period}
     @GetMapping("/total-by-period/{period}")
     public ResponseEntity<TotalResponse> getTotalByPeriod(@PathVariable String period) {
         BigDecimal total = EXPENSES.values().stream()
@@ -122,15 +117,13 @@ public class ExpenseController {
         return ResponseEntity.ok(new TotalResponse(period, total));
     }
 
-    // POST: api/v1/rest/expenses
     @PostMapping("")
-    public ResponseEntity<?> create(@Valid @RequestBody ExpenseRequest request, BindingResult result) {
+    public ResponseEntity<ApiResponse> create(@Valid @RequestBody ExpenseRequest request, BindingResult result) {
         try {
-            // Validar errores de binding
             if (result.hasErrors()) {
                 List<String> errors = result.getAllErrors().stream()
                         .map(error -> error.getDefaultMessage())
-                        .collect(Collectors.toList());
+                        .toList();
                 return ResponseEntity.badRequest()
                         .body(new ApiResponse("Errores de validación: " + String.join(", ", errors)));
             }
@@ -152,7 +145,6 @@ public class ExpenseController {
                     request.getCategory()
             );
 
-            // Validar período personalizado
             if (!expense.isValidPeriod()) {
                 return ResponseEntity.badRequest()
                         .body(new ApiResponse("Error: El período '" + request.getPeriod() + "' no es válido"));
@@ -165,19 +157,17 @@ public class ExpenseController {
 
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(new ApiResponse("Error interno del servidor: " + e.getMessage()));
+                    .body(new ApiResponse(ERROR_INTERNO_SERVIDOR + e.getMessage()));
         }
     }
 
-    // PUT: api/v1/rest/expenses/{id}
     @PutMapping("/{id}")
-    public ResponseEntity<?> update(@PathVariable UUID id, @Valid @RequestBody ExpenseRequest request, BindingResult result) {
+    public ResponseEntity<ApiResponse> update(@PathVariable UUID id, @Valid @RequestBody ExpenseRequest request, BindingResult result) {
         try {
-            // Validar errores de binding
             if (result.hasErrors()) {
                 List<String> errors = result.getAllErrors().stream()
                         .map(error -> error.getDefaultMessage())
-                        .collect(Collectors.toList());
+                        .toList();
                 return ResponseEntity.badRequest()
                         .body(new ApiResponse("Errores de validación: " + String.join(", ", errors)));
             }
@@ -193,7 +183,6 @@ public class ExpenseController {
                         .body(new ApiResponse("Error: Miembro de familia no encontrado con ID: " + request.getIdFamily()));
             }
 
-            // Actualizar el gasto existente
             expense.setTitle(request.getTitle().trim());
             expense.setDescription(request.getDescription() != null ? request.getDescription().trim() : "");
             expense.setPeriod(request.getPeriod().trim());
@@ -201,25 +190,23 @@ public class ExpenseController {
             expense.setValue(request.getValue());
             expense.setCategory(request.getCategory());
 
-            // Validar período personalizado
             if (!expense.isValidPeriod()) {
                 return ResponseEntity.badRequest()
                         .body(new ApiResponse("Error: El período '" + request.getPeriod() + "' no es válido"));
             }
 
-            expense.updateTimestamp(); // Actualizar timestamp manualmente
+            expense.updateTimestamp();
 
             return ResponseEntity.ok(new ApiResponse("Gasto actualizado correctamente", id.toString()));
 
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(new ApiResponse("Error interno del servidor: " + e.getMessage()));
+                    .body(new ApiResponse(ERROR_INTERNO_SERVIDOR + e.getMessage()));
         }
     }
 
-    // DELETE: api/v1/rest/expenses/{id}
     @DeleteMapping("/{id}")
-    public ResponseEntity<?> delete(@PathVariable UUID id) {
+    public ResponseEntity<ApiResponse> delete(@PathVariable UUID id) {
         try {
             Expense expense = EXPENSES.remove(id);
             if (expense != null) {
@@ -229,27 +216,24 @@ public class ExpenseController {
 
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(new ApiResponse("Error interno del servidor: " + e.getMessage()));
+                    .body(new ApiResponse(ERROR_INTERNO_SERVIDOR + e.getMessage()));
         }
     }
 
-    // GET: api/v1/rest/expenses/family-members
     @GetMapping("/family-members")
     public ResponseEntity<List<FamilyMember>> getFamilyMembers() {
         List<FamilyMember> members = new ArrayList<>(FAMILY_MEMBERS.values());
-        return ResponseEntity.ok(members);
+        return ResponseEntity.status(HttpStatus.OK).body(members);
     }
 
-    // GET: api/v1/rest/expenses/categories
     @GetMapping("/categories")
     public ResponseEntity<List<CategoryInfo>> getCategories() {
         List<CategoryInfo> categories = Arrays.stream(ExpenseCategory.values())
                 .map(category -> new CategoryInfo(category.name(), category.getDisplayName()))
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(categories);
+                .toList();
+        return ResponseEntity.status(HttpStatus.OK).body(categories);
     }
 
-    // DTO para requests con validaciones mejoradas
     public static class ExpenseRequest {
         @NotBlank(message = "El título es obligatorio")
         @Size(min = 3, max = 100, message = "El título debe tener entre 3 y 100 caracteres")
@@ -275,7 +259,6 @@ public class ExpenseController {
         @NotNull(message = "La categoría es obligatoria")
         private ExpenseCategory category;
 
-        // Constructores
         public ExpenseRequest() {}
 
         public ExpenseRequest(String title, String description, String period,
@@ -288,7 +271,6 @@ public class ExpenseController {
             this.category = category;
         }
 
-        // Getters y Setters
         public String getTitle() { return title; }
         public void setTitle(String title) { this.title = title; }
 
@@ -308,7 +290,6 @@ public class ExpenseController {
         public void setCategory(ExpenseCategory category) { this.category = category; }
     }
 
-    // DTO para responses
     public static class ApiResponse {
         private String mensaje;
         private String idExpense;
@@ -325,7 +306,6 @@ public class ExpenseController {
             this.timestamp = System.currentTimeMillis();
         }
 
-        // Getters y Setters
         public String getMensaje() { return mensaje; }
         public void setMensaje(String mensaje) { this.mensaje = mensaje; }
 
@@ -336,7 +316,6 @@ public class ExpenseController {
         public void setTimestamp(long timestamp) { this.timestamp = timestamp; }
     }
 
-    // DTO para información de categorías
     public static class CategoryInfo {
         private String code;
         private String displayName;
@@ -346,7 +325,6 @@ public class ExpenseController {
             this.displayName = displayName;
         }
 
-        // Getters y Setters
         public String getCode() { return code; }
         public void setCode(String code) { this.code = code; }
 
@@ -354,7 +332,6 @@ public class ExpenseController {
         public void setDisplayName(String displayName) { this.displayName = displayName; }
     }
 
-    // DTO para totales
     public static class TotalResponse {
         private String period;
         private BigDecimal total;
@@ -366,7 +343,6 @@ public class ExpenseController {
             this.formattedTotal = String.format("$%.2f", total);
         }
 
-        // Getters y Setters
         public String getPeriod() { return period; }
         public void setPeriod(String period) { this.period = period; }
 
